# fep-rust-backend

./: .dockerignore  Cargo.toml  Dockerfile  compose-test.yaml  docker-compose.yaml
.sqlx/: query-0149106aeecf62ae0907ebe1842507090b7501a928ded629db474f3489e5f994.json  query-077851c2c45a257c0b943f8034e41f1ba7990e69d5333e1ff0974c99341fcc7f.json  query-10c7476fcc3265fbd9eea74c122aed952e76e2fc84bcefa56926d46858a6a918.json  query-259734a6bbc814e059dece92bae6d5d645f312440c82c8dd9d4e39c68d223d27.json  query-2d551b983372c5c8a059a365632896eca5936672c078d941c8ccfc954deb50d0.json  query-3177b644149ef77f364b6a65ed650d2afe27be6683a8c33c3ce622fe8f047e16.json  query-555d4922c53c8671d5fe1e476f824fa701140ac661272869f53615d1804b424c.json  query-62f2bb40b5139109b9ae3763c07cf0b88e07095a47df263f5a85deb6fa42f831.json  query-6c404a67308a3c1d4442e16f30949b75d6cda383ce17729f139d5eb613520e9d.json  query-6f4d51d3356b4bbe813547226dc61b2a1dfe5b843ce3dfd98284f60215006e66.json  query-8952a2bc9b4897b94e2db56952a35e954820d286529bc6bfeab316fe4178f422.json  query-8af9a92eb6bd2f01b367994ff310f2a22a6345b76026ca685427f7dbe73574c1.json  query-9ba474ddd76da60146ebfb6d3f85f80982b13fe02812e6ead8bc6c46ed4dfbd2.json  query-b7cd8d65a43d90541e00c239115f59649ac5a266dc266acc96d8e8624554e79e.json  query-c3c57b5d6d08033ebeb91f0287b1af226c97265a76d046fb3b18adb9ec26947b.json  query-c4be4eadb5d7f9af657bc709c402d58bb3df804a18819055740d8194133084f6.json  query-cc04628ecda446d5feaad7844c75a7879e3d0d123433ac8c5d9265bb0f69f224.json  query-cdf1899c7a0727af634dacd837a6721e389afcd3865b7c000ac3ef1d9fd602f7.json  (+5 more)
src/: auth.rs  (+7 more)
(+12 files in other folders)
