[package]
name = "fep-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
chrono = "0.4.39"
dotenv = "0.15.0"
fred = "10.0.1"
jsonwebtoken = "9.3.0"
poem = "3.1.5"
poem-openapi = { version = "5.1.4", features = ["openapi-explorer"] }
rand = "0.8.5"
serde = "1.0.215"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "tls-rustls", "macros"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
